# HFT-Matrix-Challenge

./: .gitignore  CMakeLists.txt  README.md  build.sh  start_all_clients.sh
HFTDashboard/: hftdashboard.py  hftdashboard_advanced.py
hftclient2026/: CMakeLists.txt  hftclient2026  main.cpp  main_team.cpp  main_v1.cpp  main_v2.cpp
hftserver2026/: CMakeLists.txt  hftserver2026  main.cpp
tools/: CMakeLists.txt  blast_server.cpp
